src/frontend/styles/components/aside.pcss
.docs-aside {
  font-size: 14px;
  letter-spacing: 0.01em;

  @media (--mobile) {
    position: static;
    overflow: visible;
    max-height: none;
    font-size: 13px;
    display: none;
    margin-top: 20px;
  }

  &--toggled {
    display: block !important;
  }

  a {
    color: inherit;
    text-decoration: none;

    &:hover {
      color: var(--color-link-active);
    }
  }

  &__section {
    margin-bottom: 30px;

    @media (--mobile) {
      margin-bottom: 20px;
    }

    &:last-of-type {
      margin-bottom: 0;
    }

    &-title {
      display: inline-block;
      margin-bottom: 10px;
      font-size: 1.18em;
      font-weight: 600;

      @media (--mobile) {
        margin-bottom: 10px;
      }
    }

    &-list {
      padding-left: 0;
      margin: 0;
      list-style: none;

      a {
        display: inline-block;
        color: inherit;
        padding: 8px 0;
        line-height: 1.5em;
      }
    }
  }

  &__current {
    color: var(--color-page-active) !important;
  }

  &__logo-wrapper {
    margin-top: 5rem;
    display: flex;
    align-items: center;
    gap: 18px;
  }
}

.docs-aside-toggler {
  display: none;
  font-size: 13px;
  cursor: pointer;
  color: var(--color-text-second);

  @media (--mobile) {
    display: block;
  }

  svg {
    margin-right: 10px;
  }
}

